@@ -1,1 +1,6 @@
 # CSE360-BookDevils
+
+Reminder to self:
+
+VM Options:
+--module-path <replace with path to your javafx-sdk\lib folder> --add-modules=javafx.controls,javafx.fxml
